--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,16 @@
-// @import './vendors/bootstrap'; //TODO:PRUEBAS SOBRE CSS BOOTSTRAP NODE_MODULES
-@import './base/fonts';
-@import './base/reset';
-@import './components/animations';
-@import './components/buttons';
-@import './components/carousel';
-@import './components/cards';
-@import './components/containers';
-@import './components/navbar';
-@import './components/multimedia';
-@import './components/offcanvascart';
-@import './layout/body';
-@import './layout/footer';
-@import './layout/forms';
-@import './layout/header';
-@import './layout/main';
-@import './utilities/breakpoints';
-@import './utilities/mixins';
-@import './utilities/variables';
-@import './vendors/cdn';
+@forward './components/animations';
+@forward './components/buttons';
+@forward './components/carousel';
+@forward './components/cards';
+@forward './components/containers';
+@forward './components/navbar';
+@forward './components/multimedia';
+@forward './components/offcanvascart';
+@forward './layout/body';
+@forward './layout/footer';
+@forward './layout/forms';
+@forward './layout/header';
+@forward './layout/main';
+@forward './base/reset';
+@forward './base/fonts';
+@forward './vendors/cdn';
