--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,22 +1,24 @@
+@use '../utilities/variables'as clrb;
+
 // BUTTONS
 .btn {
     text-transform: uppercase;
-    font-family: $font-secondary;
+    font-family: clrb.$font-secondary;
     border-radius: 0.5rem;
     padding: 0.5rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
 
     .btn-outline-success {
-        color: $color-blue;
-        border-color: $color-blue;
-        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+        color: clrb.$color-blue;
+        border-color: clrb.$color-blue;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem clrb.$color-shadow;
         transition: 0.7s;
 
         &:hover {
-            color: $color-font-secondary;
-            border-color: $color-blue;
-            background-color: $color-blue;
+            color: clrb.$color-font-secondary;
+            border-color: clrb.$color-blue;
+            background-color: clrb.$color-blue;
         }
     }
 
