--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,18 +1,20 @@
+@use '../utilities/variables'as clrc;
+
 // CAROUSEL
 .carousel-caption {
-    background-color: $color-shadow;
+    background-color: clrc.$color-shadow;
     padding: 1rem;
     text-align: center;
     border-radius: 0.5rem;
 
     h5 {
-        font-family: $font-primary;
+        font-family: clrc.$font-primary;
         font-size: 3rem;
-        color: $color-green;
+        color: clrc.$color-green;
     }
 
     p {
-        font-family: $font-secondary;
+        font-family: clrc.$font-secondary;
         font-weight: 400;
         font-size: 1.5rem;
     }
