--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,9 @@
+@use '../utilities/variables'as varma;
+
 // MAIN
 main {
     text-align: center;
-    font-family: $font-secondary;
-    color: $color-font-primary;
-    background-image: linear-gradient(to top, $color-bg-primary, $color-bg-secondary);
+    font-family: varma.$font-secondary;
+    color: varma.$color-font-primary;
+    background-image: linear-gradient(to top, varma.$color-bg-primary, varma.$color-bg-secondary);
 }
