--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -90,3 +90,8 @@
         color: $hv-color;
     }
 }
+
+@mixin input-focus {
+    background-color: varm.$color-bg-secondary;
+    color: varm.$color-font-primary;
+}
