--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,4 +1,5 @@
 @use '../utilities/variables'as varna;
+@use '../utilities/mixins'as mixn;
 @use '../utilities/breakpoints'as bpna;
 
 // NAVBAR
@@ -31,6 +32,13 @@
                 color: varna.$color-font-secondary;
             }
 
+        }
+
+    }
+
+    form {
+        input:focus {
+            @include mixn.input-focus;
         }
     }
 
