--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -1,4 +1,5 @@
 @use '../utilities/variables'as varfor;
+@use '../utilities/mixins'as mixf;
 @use '../utilities/breakpoints'as bpfor;
 
 // FORMS
@@ -14,11 +15,17 @@
     box-shadow: 0.3125rem 0.3125rem 1.25rem varfor.$color-shadow;
     background-color: varfor.$color-violet;
     border-radius: 0.5rem;
+    .contentSubtitle {
+        display: block;
+        text-align: center;
+        margin-bottom: 0;
+        font-family: varfor.$font-primary;
 
     @include bpfor.md {
         text-align: start;
         margin-left: 2rem;
     }
+}
 }
 
 .formGroup {
@@ -59,6 +66,10 @@
             }
         }
 
+        input:focus {
+            @include mixf.input-focus;
+        }
+
         .camp label {
             display: block;
             font-size: 1.2rem;
@@ -73,8 +84,7 @@
             font-weight: bold;
 
             &:focus {
-                background-color: varfor.$color-bg-secondary;
-                color: varfor.$color-font-primary;
+                @include mixf.input-focus;
             }
         }
     }
